objects/Survey_R__c.object
<CustomObject>
    <fields>
        <fullName>AnswerPart__c</fullName>
        <label>AnswerPart</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Part__c</fullName>
        <label>Answer Part</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <label>CaseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SurveyRs</relationshipLabel>
        <relationshipName>SurveyRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>Survey responses .</description>
    <label>Survey R(test)</label>
    <nameField>
        <label>Survey R Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>